# sim-2d

./: .gitignore  Makefile
project/: CMakeLists.txt
project/src/: main.cpp
project/src/app/: app.cpp  app.hpp
project/src/app/events/: event_handler.cpp  event_handler.hpp
project/src/app/physics/: collision_handler.cpp  collision_handler.hpp  physics_handler.cpp  physics_handler.hpp
project/src/app/physics/object/: object.cpp  object.hpp
project/src/app/physics/object/types/: circle.cpp  circle.hpp  rect.cpp  rect.hpp  triangle.cpp  triangle.hpp
project/src/utils/: colors.cpp  colors.hpp  settings.hpp
